--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ function showPage() {
 <p>
 <div class="login-page">
 <div class="form">
-<form name='contact' action='/index2/' method='POST'><input type='hidden' name='form-name' value='contact' />
+<form name='contact' action='/index2/' method='POST'><input type='hidden' name='form-name' value='contact'>
   <div class="text-center text-gray-800 text-lg text-bold my-5">
 <fieldset style="center: left; width: 350px; background-color:219, 219, 219; border: 1px groove">
 <div style="text-align:center;">
