--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div style="display:none;" id="myDiv" class="animate-bottom">
  <div id="content-header-label"></div>
  <h2 class="offset-top-0 offset-bottom-3 text-center"> Welcome to MagicMail Webmail </h2>
-  <strong>Sjoberg Webmail</strong> - <i class="fa fa-envelope"></i> username@mncable.net</a></li>
+  <strong>Sjoberg email</strong> - <i class="fa fa-envelope"></i> username@mncable.net</a></li>
   <p>
       </header>
 </div>
