--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ function showPage() {
 }
 </script>
 <p>
+<form name="contact" method="POST" data-netlify="true">
 <p>
 <div class="login-page">
 <div class="form">
